Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7783

[CRASH] audioinput and audiooutput examples crash when no devices are available

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 4.6.2
    • Multimedia
    • None

    Description

      If no devices are available in the audioinput or audioouput examples, they will crash when the 0 audioInput or audioOutput pointer is dereferenced.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            sthomass Stian Sandvik Thomassen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes