[CRASH] audioinput and audiooutput examples crash when no devices are available.

Task-number:QTBUG-7783
Reviewed-by:Justin McPherson
(cherry picked from commit 3108f02f35685bd57486e198277c600e09d98b13)